--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "fax>=1.0.0",
+    "flax>=0.12.1",
+    "jax[cuda13]>=0.8.1",
+    "jaxlib>=0.8.1",
+    "jaxtyping>=0.3.3",
     "torch>=2.9.1",
     "torchaudio>=2.9.1",
     "torchvision>=0.24.1",
